# moteo_poly

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  report.md  scrape_polymarket_weather.py  text.html  weather_markets.csv  weather_markets.json  Прогнозирование температуры для городов и аэропортов_ структурированное руководство по построению высокоточной модели.docx
artifacts/: forward_eval_real_events.csv  forward_eval_summary.json  holdout_predictions.csv  market_signals.csv  market_signals_summary.json  model_metrics.json  model_report.md  paper_dashboard.html  paper_portfolio.csv  paper_portfolio.json  paper_portfolio_settled.csv  paper_portfolio_settled.json  predictions.csv  predictions_gbm.csv  reliability_oot.json  resolved_model_events.csv  resolved_model_report.html  strategy_candidates_v2.csv  strategy_lab_report.html  strategy_lab_summary.json  strategy_portfolio_v2.csv  training_comparison.json
configs/: model.yaml
data/: actuals.csv  features.csv  historical_observed.csv  manual_stations.csv  polymarket_geoblock.json  polymarket_weather_events.json  polymarket_weather_markets.csv  station_calibration.csv  stations.cache.json  targets.csv  targets.jsonl  training.csv  training_stations.json
docs/: ORCHESTRATION.md  model_architecture.md  polymarket_weather_strategy.md  weather_risk_investigation_2026-05-05.md
scripts/: audit_2day.ps1  audit_near_close_agreement.py  backfill_paper_portfolio_identity.py  backtest_real_events.py  build_features.py  build_historical_testset.py  build_historical_training.py  build_market_signals.py  build_targets.py  (+48 more)
(+93 files in other folders)
