[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detect-temperature"
version = "0.1.0"
description = "Point temperature prediction foundation for Polymarket weather markets."
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
]

[project.scripts]
detect-temperature = "detect_temperature.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

